--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,16 @@ set(CMAKE_CXX_FLAGS, "${CMAKE_CXX_FLAGS} -std=c++0x")
 # Project source code
 set(SOURCES
     src/main.cpp
+    src/exception.cpp
     src/mainwindow.cpp
+    src/whandgesture.cpp
 )
 
 # Headers for MOC
 set(HEADERS
+    include/exception.h
     include/mainwindow.h
+    include/whandgesture.h
 )
 
 # Include directories for libraries
