Added RS232 communication support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(OpenCV REQUIRED)
 find_package(Qt4 COMPONENTS QtCore QtGui REQUIRED)
 
 # Set C++ flags
-set(CMAKE_CXX_FLAGS, "${CMAKE_CXX_FLAGS} -std=c++0x")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 # Project source code
 set(SOURCES
@@ -25,6 +25,7 @@ set(HEADERS
 
 # Include directories for libraries
 set(INCLUDE_DIRS
+    3rdpart/
     ${OpenCV_INCLUDE_DIRS}
     ${QT_INCLUDES}
 )
@@ -34,10 +35,13 @@ set(LIBRARIES
     ${OpenCV_LIBRARIES}
     ${QT_QTCORE_LIBRARIES}
     ${QT_QTGUI_LIBRARIES}
+    ${CMAKE_CURRENT_SOURCE_DIR}/3rdpart/libqextserialport.so # Must be better!
 )
 
 include_directories(include/)
 include_directories(${INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/include/)
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/3rdpart/)
 
 # MOC Compiling
 foreach(MOCHeader ${HEADERS})
@@ -45,8 +49,7 @@ foreach(MOCHeader ${HEADERS})
 endforeach(MOCHeader)
 
 # Compiling
-add_executable(${PROJECT_NAME} ${SOURCES} ${MOCSrc})
+add_executable(${PROJECT_NAME} ${SOURCES} ${MOCSrc} ${3RDPART_SOURCES} ${3RDPART_MOC_HEADERS})
 
 # Linking
 target_link_libraries(${PROJECT_NAME} ${LIBRARIES})
-
